# flix-python-fastapi

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/configs/: config.py  errors.py  logging.py  logging.yml
backend/app/data/: mongo_connection.py  mongo_model.py
backend/app/data/repositories/: user.py
backend/app/domains/entities/movies/: movie.py
backend/app/domains/entities/users/: user.py
backend/app/domains/events/: dispatcher.py  event.py  handler.py
backend/app/domains/events/movies/: movie.py
backend/app/entities/users/: user.py
backend/app/routes/v1/auth/: auth_routes.py
backend/app/routes/v1/movies/: movies_routes.py
backend/app/routes/v1/users/: users_routes.py
backend/app/use_cases/movies/add/: add_movie.py
backend/app/use_cases/movies/add/schemas/: movie.py
backend/app/use_cases/users/delete/: delete_user.py
backend/app/use_cases/users/delete/schemas/: delete_user.py
backend/app/use_cases/users/get/: get_user.py
backend/app/use_cases/users/get/schemas/: get_user.py
backend/app/use_cases/users/list/: list_users.py
backend/app/use_cases/users/list/schemas/: list_users.py
backend/app/use_cases/users/login/: login_user.py
backend/app/use_cases/users/login/schemas/: login_user.py
backend/app/use_cases/users/signup/: signup_user.py
backend/app/use_cases/users/signup/schemas/: signup_user.py
backend/app/use_cases/users/update/: update_user.py
backend/app/use_cases/users/update/schemas/: update_user.py
frontend/: Dockerfile  package-lock.json  (+1 more)
(+3 files in other folders)
